@@ -1,3 +1,4 @@
+2021. 4.19. Modified zVec3DTreeAdd. [zeo_vec3d_tree]
 2021. 4.19. Added zVec3DTreeAddID and modified zVec3DTreeAdd. [zeo_vec3d_tree]
 2021. 4.19. Added size and id members to zVec3DTree. [zeo_vec3d_tree]
 2021. 4.19. Added zVec3DTreeFPrint. [zeo_vec3d_tree]
